--- a/style.css
+++ b/style.css
@@ -11,6 +11,12 @@
 	background-color: grey;
 
 }
+#navigation .csi
+{
+	padding-left: 40px;
+	font-family: montserrat;
+	
+}
 #navigation h1
 {
 	padding-top: 9px;
@@ -18,6 +24,8 @@
 	height: 8px;
 	width: 10%;
 	font-size: 40px;
+	color: #fff;
+	font-family: montserrat;
 
 
 }
@@ -63,6 +71,71 @@
 	background-image: url(1.png); 
 
 }
+#bd .button
+{
+position: relative;
+top: 400px;
+margin-left: 530px;
+border-radius: 50%;
+
+}
+.button {
+  box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+.button span {
+  cursor: pointer;
+  display: inline-block;
+  position: relative;
+  transition: 0.5s;
+}
+
+.button span:after {
+  content: '\00bb';
+  position: absolute;
+  opacity: 0;
+  top: 0;
+  right: -20px;
+  transition: 0.5s;
+}
+
+.button:hover span {
+  padding-right: 25px;
+}
+
+.button:hover span:after {
+  opacity: 1;
+  right: 0;}
+
+
+.btn{
+border: 1px solid #fff;
+padding: 10px 30px;
+color: #fff;
+text-decoration: none;
+}
+.button{
+border-radius: 50px;
+}
+.btn:hover{
+background-color: #fff;
+color: #000;}
+#bd .logo
+{
+	position: relative;
+	
+	top: 100px;
+	transition: transform;
+	
+
+}
+.logo:hover
+{
+	transform: rotate(540deg);
+	transition-duration: 5s;
+}
+.logo img{
+padding-left:40%;
+}
 #bd .bdi
 {
 	width: 100%;
@@ -70,6 +143,7 @@
 	background-size: 100% 100%;
 	background-color: black;
 	background:transparent;
+	color: #fff;
 	
 }
 .bdi h1
@@ -81,11 +155,41 @@
 	font-size: 100px;
 
 }
-.intro
-{
-	width: 100%;
-	height: 100vh;
-	background-size: 100% 100%;
-	background-image: url(g.jpg); 
 
+
+#info
+{
+	
+	background-color:grey; 
+}
+
+#info .infor1
+{
+	margin: 20px;
+	padding-left: 47%;
+	width: 50%;
+	height: 50vh;
+	background-size: 100% 100%;
+	background-color: black;
+}
+#info .infor2
+{
+	margin: 20px;
+	padding-left: 47%;
+	width: 50%;
+	height: 50vh;
+	background-size: 100% 100%;
+	background-color: black;
+}#info .infor3
+{
+	margin: 20px;
+	padding-left: 47%;
+	width: 50%;
+	height: 50vh;
+	background-size: 100% 100%;
+	background-color: black;
+}
+#info .infor2 .d 
+{
+	background-image: url(u.jpg);
 }
